<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity"
    tools:ignore="SpeakableTextPresentCheck">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/wave11"
                android:rotationX="-180"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="35dp"
                android:fontFamily="@font/ubuntu_medium"
                android:text="@string/let_s_get_nstarted"
                android:textColor="@color/white"
                android:textSize="52sp"
                android:textStyle="normal"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/maroon_700"
            android:textSize="35sp"
            android:fontFamily="@font/ubuntu_medium"
            android:textAlignment="center"
            android:text="@string/register_as" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button11"
            app:cornerRadius="50dp"
            android:textSize="18sp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/student" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button2"
            app:cornerRadius="50dp"
            android:textSize="18sp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/incharge" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button3"
            app:cornerRadius="50dp"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:text="@string/driver" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:layout_gravity="center"
                android:textColor="@color/maroon_700"
                android:text="@string/already_have_an_account" />

            <TextView
                android:id="@+id/textViewregister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textColor="#3A7CFF"
                android:layout_gravity="center"
               android:layout_marginTop="8dp"
                android:textStyle="bold"
                android:text="@string/register" />

    </LinearLayout>
</ScrollView>
