<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentLoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ProgressBar
            android:id="@+id/progressBarl"
            android:background="@color/maroon_500"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:indeterminateTint="#FF9800"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/relative"
            android:layout_marginBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/topview"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="@color/maroon_500"
                />

            <View
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:background="@drawable/wave66"
                android:rotationX="-180"
                android:layout_below="@id/topview" />
            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="55dp"
                android:fontFamily="@font/ubuntu_medium"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="52sp"
                android:textStyle="normal"
                android:layout_alignParentTop="true"
          />
            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="40dp"
                app:srcCompat="@drawable/ic_baseline_person_24" />

        </RelativeLayout>


        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:textSize="35sp"
            android:fontFamily="@font/ubuntu_medium"
            android:textColor="@color/maroon_500"
            android:text="@string/student_login" />

        <EditText
            android:id="@+id/emailstuin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/textbg"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="2dp"
            android:textColor="@color/maroon_700"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/passwordin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/textbg"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="10dp"
            android:paddingStart="10dp"
            android:textColor="@color/maroon_700"
            android:textSize="18sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonLoginstu"
            app:cornerRadius="50dp"
            android:textSize="18sp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/login" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonForgot"
            app:cornerRadius="50dp"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password" />
        <TextView
            android:id="@+id/textforgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:visibility="gone"
            android:textSize="25sp"
            android:fontFamily="@font/ubuntu_medium"
            android:textColor="@color/maroon_500"
            android:text="Forgot Password?" />

        <EditText
            android:id="@+id/emailforgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/textbg"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="Enter Registered E-mail"
            android:inputType="textEmailAddress"
            android:visibility="gone"
            android:minHeight="48dp"
            android:padding="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="2dp"
            android:textColor="@color/maroon_700"
            android:textSize="18sp" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonReset"
            app:cornerRadius="50dp"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="Send Reset Link" />
    </LinearLayout>
</ScrollView>